<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/activity_confirm_new_trip"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/add_new_trip"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/confirm_new_trip"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/input_trip_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/add_new_trip"
        />

    <TextView
        android:id="@+id/destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/input_trip_name"
        />

    <TextView
        android:id="@+id/trip_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/destination"
        />

    <TextView
        android:id="@+id/require_risk_assessment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/trip_date"
        />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:gravity="start|top"
        app:layout_constraintTop_toBottomOf="@+id/require_risk_assessment"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/description"
        />

    <TextView
        android:id="@+id/is_stay_behind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/duration"
        />

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/button_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/is_stay_behind"
        app:layout_constraintVertical_bias="0.458" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:text="@string/button_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/is_stay_behind"
        app:layout_constraintVertical_bias="0.512" />


</androidx.constraintlayout.widget.ConstraintLayout>